- Fix Sidebar scroll issue on mobile - Adjust accordion tabindex

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -15,6 +15,7 @@ body {
 
 .content-container {
   margin: 1rem 0 1rem 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 .logo-container {
@@ -38,7 +39,8 @@ body {
   right: -#{$sidebar-width};
   transition: right 0.3s;
   overflow-y: auto;
-  z-index: 1;
+  z-index: 1000;
+  -webkit-overflow-scrolling: touch;
   @media #{$tablet} {
     left: 0rem;
   }
@@ -219,7 +221,7 @@ body {
     top: 1.9rem;
     right: 0;
     transition: right 0.3s;
-    z-index: 2;
+    z-index: 1001;
     padding: 0.8rem 0.9rem;
     @media #{$tablet} {
       display: none;
